--- a/roles/fonts/molecule/default/molecule.yml
+++ b/roles/fonts/molecule/default/molecule.yml
@@ -2,12 +2,14 @@
 dependency:
   name: galaxy
 driver:
-  name: docker
+  name: vagrant
+  provider:
+    name: virtualbox
 lint:
   name: yamllint
 platforms:
   - name: instance
-    image: archlinux/base
+    box: archlinux-gnome
 provisioner:
   name: ansible
   lint:
