add testifra to venv requirements

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,115 +1,29 @@
-ansible==2.8.2
-ansible-lint==4.1.0
-anyconfig==0.9.7
-appdirs==1.4.3
-application-utility==1.1.3
-arrow==0.14.2
+ansible==2.8.3
 asn1crypto==0.24.0
 astroid==2.2.5
 atomicwrites==1.3.0
 attrs==19.1.0
-beautifulsoup4==4.7.1
-binaryornot==0.4.4
-btrfsutil==1.1.1
-CacheControl==0.12.5
-Cerberus==1.2
 cffi==1.12.3
-chardet==3.0.4
-chrome-gnome-shell==0.0.0
-click==6.7
-click-completion==0.3.1
-colorama==0.3.9
-cookiecutter==1.6.0
 cryptography==2.7
-cupshelpers==1.0
-distlib==0.2.9
-distro==1.4.0
-docker==4.0.2
-docker-pycreds==0.4.0
-docopt==0.6.2
-entrypoints==0.3
-fasteners==0.15
-flake8==3.7.8
-future==0.17.1
-git-url-parse==1.2.2
-greenlet==0.4.15
-Guake==3.6.3
-gufw==18.10.0
-html5lib==1.0.1
-idna==2.7
-importlib-metadata==0.18
-iotop==0.6
+importlib-metadata==0.19
 isort==4.3.21
-Jade-Application-Kit==2.0.7
-jedi==0.14.1
-Jinja2==2.10
-jinja2-time==0.2.0
+Jinja2==2.10.1
 lazy-object-proxy==1.4.1
-lockfile==0.12.2
-louis==3.10.0
 MarkupSafe==1.1.1
 mccabe==0.6.1
-molecule==2.20.2
-monotonic==1.5
-more-itertools==7.1.0
-msgpack==0.6.1
-npyscreen==4.10.5
+more-itertools==7.2.0
 packaging==19.0
-pacman-mirrors==4.14.2
-parso==0.5.1
-pathspec==0.5.9
-pbr==5.1.1
-pep517==0.5.0
-pexpect==4.6.0
-Pillow==6.1.0
 pluggy==0.12.0
-poyo==0.4.2
-progress==1.5
-prompt-toolkit==2.0.9
-psutil==5.4.6
-ptpython==2.0.4
-ptyprocess==0.6.0
-pwquality==1.4.0
 py==1.8.0
-pycairo==1.18.1
-pycodestyle==2.5.0
 pycparser==2.19
-pycups==1.9.74
-pycurl==7.43.0.2
-pyflakes==2.1.1
-Pygments==2.4.2
-PyGObject==3.32.2
-pyline==0.3.16
 pylint==2.3.1
-pynvim==0.3.2
-pyparsing==2.4.0
-PyQt5==5.13.0
-PyQt5-sip==4.19.18
+pyparsing==2.4.1.1
 pytest==5.0.1
-python-dateutil==2.8.0
-python-gilt==1.2.1
-pytoml==0.1.20
-pyxdg==0.26
-PyYAML==3.13
-requests==2.22.0
-retrying==1.3.3
-ruamel.yaml==0.15.100
-sh==1.12.14
-six==1.11.0
-soupsieve==1.9.2
-tabulate==0.8.2
-team==1.0
+python-vagrant==0.5.15
+PyYAML==5.1.1
+six==1.12.0
 testinfra==3.0.5
-tree-format==0.1.2
 typed-ast==1.4.0
-ufw==0.36
-urllib3==1.25.3
-virtualenv==16.6.2
 wcwidth==0.1.7
-webencodings==0.5.1
-websocket-client==0.56.0
-whichcraft==0.6.0
 wrapt==1.11.2
-yamllint==1.16.0
-youtube-dl==2019.7.16
 zipp==0.5.2
