add fonts_from_aur to download fonts on AUR
- this includes roboto slab as default
- also checks that there are aur helpers
- also checks that fonts_from_aur is populatd
- fixes non idempotence of archiver
  - does so by creating a looped seperate task
  - this task now creates an empty flag file
  - the empty file flag is checked against
  - if it exists the 'creates' option skips

--- a/roles/fonts/defaults/main.yml
+++ b/roles/fonts/defaults/main.yml
@@ -10,6 +10,9 @@ fonts_from_packages:
   - noto-fonts
   # - nerd-fonts-noto-sans-mono
 
+fonts_from_aur:
+  - ttf-roboto-slab
+
 # These aren't os-specific (for unix-based)
 fonts_from_http:
   - local_subdir: iosevka
