add python-psutil to pkgs make dconf possible

--- a/group_vars/all.yml
+++ b/group_vars/all.yml
@@ -69,7 +69,7 @@ cli_packages:
   - cowsay
   - cowfortune
   - lolcat
-
+  - python-psutil
 
 ### packages for gui-packages install task
 gui_packages:
