add xclip to cli_packages var, remove from common

--- a/group_vars/all.yml
+++ b/group_vars/all.yml
@@ -69,6 +69,7 @@ cli_packages:
   - cowsay
   - cowfortune
   - lolcat
+  - xclip
   - python-psutil
   - python-neovim # consider putting these in a python dev env role?
   - nodejs # consider putting into a nvm/node/npm role also have it install node neovim helper
