feat: initial asdf role to instal asdfvm & node
- installs asdf-vm itself
- relies on asdf_* variables to define where...
  - asdf_data_dir is
  - asdf_config_file is
  - asdf_default_tool_versions_file is
- installs using git
- then installs node with given node versions
- default values for all vars in role defaults

--- a/host_vars/odin.yml
+++ b/host_vars/odin.yml
@@ -55,6 +55,14 @@ flatpaks:
   - com.slack.Slack
   - org.glimpse_editor.Glimpse
   - org.freecadweb.FreeCAD 
+
+### ASDF
+asdf_version: master
+asdf_data_dir: "~/.local/share/asdf"
+asdf_config_file: "{{asdf_data_dir}}/asdfrc"
+asdf_default_tool_versions_filename: "${{asdf_data_dir}}/tool-versions"
+asdf_node_versions: ['14.14.0', '15.0.0']
+
 ### dotfiles
 dotfiles_local_root_dir: '~/.dots'
 dotfiles_git_server_base_url: 'github.com'
