--- a/odin.yml
+++ b/odin.yml
@@ -4,24 +4,12 @@
   vars_files:
     - "./host_vars/odin.yml"
   pre_tasks:
-      # These will check for python binary and install otherwise
-      # TODO: Turn into a bootstrap shell script instead
-    - name: ensure python is installed (Arch-family linux)
-      raw: test ! -e /usr/bin/python && (pacman --noconfirm -S python)
-      become: yes
-      changed_when: no
-      ignore_errors: yes
-      when: ansible_os_family == 'Archlinux'
-    - name: ensure python is installed (debian-family linux)
-      raw: test ! -e /usr/bin/python && (apt install -y python)
-      ignore_errors: yes
-      become: yes
-      changed_when: no
-      when: ansible_os_family == 'Debian'
+    # TODO: Turn into roles
     # - import_tasks: tasks/cli-packages.yml
     # - import_tasks: tasks/gui-packages.yml
   roles:
-    # - marcus-grant.mydotfiles
-    - {role: 'keyboard', tags: 'keyboard'}
+    # - {role: 'marcus-grant.mydotfiles', tags: 'dotfiles'}
+    # - {role: 'keyboard', tags: 'keyboard'}
+    - {role: 'asdf', tags: ['dev', 'asdf']}
     # - gnome
-  #   - fonts
+    # - fonts
