--- a/requirements.yml
+++ b/requirements.yml
@@ -1,10 +1,12 @@
 ---
+- name: geerlingguy.homebrew
+- name: geerlingguy.mas
 - name: marcus-grant.bootstrap-ansible-arch
   src: https://github.com/marcus-grant/role-bootstrap-ansible-arch
   version: master
 - name: marcus-grant.mydotfiles
   src: https://github.com/marcus-grant/role-mydotfiles
   version: master
-- name: marcus-grant.common-packages
-  src: https://github.com/marcus-grant/role-my-common-packages
-  version: master
+# - name: marcus-grant.common-packages
+#   src: https://github.com/marcus-grant/role-my-common-packages
+#   version: master
