GPG: Add task that installs & configs GPG on Mac
- group_vars/mac
  - Adds a single var gpg_agent_cache_timeout
    - Sets gpg-agent.conf default-cache-ttl (sec.)
- mac.yml playbook
  - Add the taskfile gpg.yml
- gpg.yml taskfile
  - Installs (via brew on macs) gpg+pinentry
  - Set these gpg-agent.conf settings:
    - Enable pinentry-mac for GUI input of GPG keys
    - Set default-cache-ttl to gpg_agent_cache_timeout
      - The default timeout time to stop caching passwd

--- a/group_vars/mac.yml
+++ b/group_vars/mac.yml
@@ -1,6 +1,8 @@
 ---
 downloads: ~/.cache/ansible-downloads/
 
+gpg_agent_cache_timeout: 1000
+
 dotfiles_enabled: true
 dotfiles_local_root_dir: '~/.dots'
 dotfiles_git_server_base_url: 'github.com'
